# MetaMusk-backend-repo

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  test_hallushield.py
app/: main.py
app/agents/: execution_agent.py  knowledge_agent.py  state.py  supervisor_agent.py
app/api/routes/: agents.py  prompt_enhancement.py
app/api/v1/: api.py
app/core/: config.py
app/graph/: multi_agent_graph.py
app/prompts/: execution_agent.txt  knowledge_agent.txt  supervisor_agent.txt
app/schemas/: artifacts.py
app/tools/: __init__.py  aggregator_tool.py  assembler_tool.py  job_status_tool.py  prompt_enhancement_tool.py  retriever_tool.py  script_generator_tool.py  vm_executor_tool.py  web_search_tool.py
hallushield/: __init__.py  claim_extractor.py  evidence_retriever.py  memory_store.py  model_router.py  pipeline.py  policy.py  state.py  types.py  verifier.py
render_worker/: Dockerfile  main.py
