[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    
    # LangChain Ecosystem
    "langchain>=0.3.14",
    "langgraph>=0.2.62",
    "langchain-groq>=0.2.3",
    "langchain-google-genai>=2.0.8",
    "langchain-anthropic>=0.3.3",
    
    # API SDKs
    "groq>=0.15.0",
    "google-genai>=1.55.0",
    "anthropic>=0.48.0",
    "huggingface-hub>=0.28.1",
    
    # Database & Caching
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.36",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
]
