[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.10.6",
    # LangChain Ecosystem
    "langchain-groq>=0.2.3",
    "langchain-google-genai>=2.0.8",
    # API SDKs
    "groq>=0.15.0",
    "google-genai>=1.55.0",
    "huggingface-hub>=0.28.1",
    # Database & Caching
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.36",
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.12.0",
    "pgvector>=0.4.2",
    "langchain>=1.2.3",
    "langsmith>=0.6.2",
    "langgraph>=1.0.5",
]
